dark mode fixed

--- a/src/components/Utilities/styles.css
+++ b/src/components/Utilities/styles.css
@@ -8,6 +8,7 @@
     min-width: 9rem;
     text-align: center;
     color: white;
+    cursor: pointer;
 }
 
 
